Updating views, starting with torrenting aswell

--- a/app/Views/app.twig
+++ b/app/Views/app.twig
@@ -2,7 +2,7 @@
 
 <html lang="en">
   <head>
-    <title>.tube</title>
+    <title>hypertube</title>
     <meta name="viewport" charset="UTF-8" content="width=device-width, initial scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ base_url() }}/css/app.css">
@@ -21,7 +21,7 @@
 
   <body>
       {% include 'render/navigation.twig' %}
-      <div class="container-fluid">
+      <div class="container">
         {% include 'render/flash.twig' %}
         <div class="container">
           <div id="google_translate_element"></div>
