--- a/app/Views/render/info.twig
+++ b/app/Views/render/info.twig
@@ -1,6 +1,5 @@
 <div class="page-header text-center">
-  <h1>adotube</h1>
-  <p>sign up/ login to stream or download movies!</p>
+  <h1>sign up/ login to stream or download movies!</h1>
 </div>
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
 <!-- Indicators -->
